K8s/base/frontend/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontendproxy
      ports:
        - port: 8080
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: adservice
      ports:
        - port: 8080
    - to:
        - podSelector:
            matchLabels:
              app: cartservice
      ports:
        - port: 8080
    - to:
        - podSelector:
            matchLabels:
              app: checkoutservice
      ports:
        - port: 8080
    - to:
        - podSelector:
            matchLabels:
              app: currencyservice
      ports:
        - port: 8080
    - to:
        - podSelector:
            matchLabels:
              app: productcatalogservice
      ports:
        - port: 8080
    - to:
        - podSelector:
            matchLabels:
              app: productreviewservice
      ports:
        - port: 8080
    - to:
        - podSelector:
            matchLabels:
              app: recommendationservice
      ports:
        - port: 8080
    - to:
        - podSelector:
            matchLabels:
              app: shippingservice
      ports:
        - port: 8080
    - to:
        - podSelector:
            matchLabels:
              app: flagd
      ports:
        - port: 8013
    - to:
        - podSelector:
            matchLabels:
              app: opentelemetry-demo-otelcol
      ports:
        - port: 4317
    - to:
        - namespaceSelector: {}
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
